integracion de contenido

--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
         <!-- Meet Our Team -->
         <div class="team container">
             <div class="team-title">
-                <h3>Meet Our Team</h3>
+                <h3>Meet Our Place</h3>
             </div>
             <div class="row">
                 <div class="span12">
@@ -124,7 +124,8 @@
             <div class="row">
                 <div class="call-to-action-text span12">
                     <div class="ca-text">
-                        <p>Lorem ipsum <span class="violet">dolor sit amet</span>, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et ut wisi enim.</p>
+                         <p>we are your <span class="violet">best choice</span> to store your most precious possessions with <span class="violet">unparalleled luxury and maximum safety.</span>
+                        </p>
                     </div>
                     <div class="ca-button">
                         <a href="">Try It Now!</a>
