--- a/services.html
+++ b/services.html
@@ -96,10 +96,11 @@
             <div class="row">
                 <div class="services-full-width-text span12">
                     <h4>Uses</h4>
+                    <p>When compared to renting equivalent space, one advantage of owning is the increased rights. Rental properties are always under the control of a landlord, which means that monthly rent could be raised or the lease terminated with short notice to the tenant. Renters face the real prospect that their rents will escalate in the future because of rising construction costs: land, steel and concrete have risen over the years. By owning the space, individuals can avoid such surprises. And a mortgage should remain relatively stable over the life of a loan.</p>
                     <p>This exclusive gated community of garage condominiums is situated on nine acres with 99 completed units. Each unit provides secure indoor storage for classic and exotic car collectors, boat and RV owners, business inventories, personal home possessions or workshops for the hobbyists .
                     Add cabinets, shelving, mezzanines, car lifts, custom floor coverings, flat panel TVs and more. If you would like some recommendations, we have teamed with several companies to provide our buyers with the highest quality of flooring, mezzanines, and more.
                 </p>
-                <p>We placed strategically  closed circuit security cameras to record the comings and goings on the property. Each unit has a monitored heat detector. The perimeter is gated and coded for owners access only. Each owner, at his expense, may install cameras in their own unit that can be monitored from their computer at home. Above all, since you are in a community of like minded neighbors, the present owners keep an eye out for each other.</p><p> The smartly decorated clubhouse provides a kitchen area, a comfortable seating section with a large screen TV, WIFI network and three restroom facilities (one has a shower in it). Outside offers a granite table and chairs under a covered patio.</p>
+                <p>We placed strategically  closed circuit security cameras to record the comings and goings on the property. Each unit has a monitored heat detector. The perimeter is gated and coded for owners access only. Each owner, at his expense, may install cameras in their own unit that can be monitored from their computer at home. Above all, since you are in a community of like minded neighbors, the present owners keep an eye out for each other.</p>
                 </div>
             </div>
         </div>
@@ -170,6 +171,10 @@
                         <li>30 or 50 amp RV outlet</li>
                     </ul>
                 </div>
+
+            </div>
+            <div class="row">
+                <div class="services-full-width-text span12"><p> The smartly decorated clubhouse provides a kitchen area, a comfortable seating section with a large screen TV, WIFI network and three restroom facilities (one has a shower in it). Outside offers a granite table and chairs under a covered patio.</p></div>
             </div>
         </div>
 
@@ -178,7 +183,7 @@
             <div class="row">
                 <div class="call-to-action-text span12">
                     <div class="ca-text">
-                        <p>Property<span class="violet">dolor sit amet</span>, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et ut wisi enim.</p>
+                       <p>we are your <span class="violet">best choice</span> to store your most precious possessions with <span class="violet">unparalleled luxury and maximum safety.</span></p>
                     </div>
                     <div class="ca-button">
                         <a href="">Buy Now!</a>
