se agregó el dato de la dirección corecta

--- a/contact.html
+++ b/contact.html
@@ -112,8 +112,9 @@
                     <h4>We Are Here</h4>
                     <div class="map"></div>
                     <h4>Address</h4>
-                    <p>Via Principe Amedeo 9 <br> 10100, Torino, TO, Italy</p>
-                    <p>Phone: 0039 333 12 68 347</p>
+                    <p>4115 Kreinhop rd. Spring Tx 77388</p>
+                    <h4>Phone</h4>
+                    <p>01800 luxurywerehouse</p>
                 </div>
             </div>
         </div>
@@ -137,10 +138,10 @@
                     </div>
                     <div class="widget span3">
                         <h4>Contact Us</h4>
-                        <p><i class="icon-map-marker"></i> Address: Houston Texas</p>
+                        <p><i class="icon-map-marker"></i> Address: 4115 Kreinhop rd. Spring Tx 77388</p>
                         <p><i class="icon-phone"></i> Phone: 01800 luxurywerehouse</p>
                         <p><i class="icon-user"></i> Skype: luxurywarehouse</p>
-                        <p><i class="icon-envelope-alt"></i> Email: <a href="">info@luxurywerehousestorage.com</a></p>
+                        <p><i class="icon-envelope-alt"></i> Email: <a href="#">info@luxurywarehousestorage.com</a></p>
                     </div>
                 </div>
                 <div class="footer-border"></div>
