--- a/portfolio.html
+++ b/portfolio.html
@@ -103,71 +103,56 @@
                             <a href="assets/img/portfolio/bus-boat.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/bus-boat.jpg" alt="">
                             </a>
-                            <h4>Lorem Website</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
-                        </div>
+                                   </div>
                     </li>
                     <li data-id="p-2" data-type="logo-design" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/business.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/business.jpg" alt="">
                             </a>
-                            <h4>Ipsum Logo</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
-                        </div>
+                                   </div>
                     </li>
                     <li data-id="p-3" data-type="print-design" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/club-house.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/club-house.jpg" alt="">
                             </a>
-                            <h4>Dolor Prints</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
-                        </div>
+                                   </div>
                     </li>
                     <li data-id="p-4" data-type="web-design" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/luxury-gate.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/luxury-gate.jpg" alt="">
                             </a>
-                            <h4>Sit Amet Website</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
-                        </div>
+                                   </div>
                     </li>
                     <li data-id="p-5" data-type="logo-design" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/collection-car.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/collection-car.jpg" alt="">
                             </a>
-                            <h4>Consectetur Logo</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
-                        </div>
+                                   </div>
                     </li>
                     <li data-id="p-6" data-type="print-design" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/panoramical.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/panoramical.jpg" alt="">
                             </a>
-                            <h4>Adipisicing Print</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
-                        </div>
+                                   </div>
                     </li>
                     <li data-id="p-7" data-type="web-design" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/aerea.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/aerea.jpg" alt="">
                             </a>
-                            <h4>Elit Website</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
-                        </div>
+                                   </div>
                     </li>
                     <li data-id="p-8" data-type="print-design" class="span3">
                         <div class="work">
                             <a href="assets/img/portfolio/aerea2.jpg" rel="prettyPhoto">
                                 <img src="assets/img/portfolio/aerea2.jpg" alt="">
                             </a>
-                            <h4>Sed Do Prints</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                            
                         </div>
                     </li>
                      <!-- <li data-id="p-9" data-type="web-design" class="span3">
@@ -229,10 +214,10 @@
                     </div>
                     <div class="widget span3">
                         <h4>Contact Us</h4>
-                        <p><i class="icon-map-marker"></i> Address: Houston Texas</p>
+                        <p><i class="icon-map-marker"></i> Address: 4115 Kreinhop rd. Spring Tx 77388</p>
                         <p><i class="icon-phone"></i> Phone: 01800 luxurywerehouse</p>
                         <p><i class="icon-user"></i> Skype: luxurywarehouse</p>
-                        <p><i class="icon-envelope-alt"></i> Email: <a href="">info@luxurywerehousestorage.com</a></p>
+                        <p><i class="icon-envelope-alt"></i> Email: <a href="#">info@luxurywarehousestorage.com</a></p>
                     </div>
                 </div>
                 <div class="footer-border"></div>
