--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
                     </div>
                     <div class="widget span3">
                         <h4>Contact Us</h4>
-                        <p><i class="icon-map-marker"></i> Address: Houston Texas</p>
+                        <p><i class="icon-map-marker"></i> Address: 4115 Kreinhop rd. Spring Tx 77388</p>
                         <p><i class="icon-phone"></i> Phone: 01800 luxurywerehouse</p>
                         <p><i class="icon-user"></i> Skype: luxurywarehouse</p>
-                        <p><i class="icon-envelope-alt"></i> Email: <a href="">info@luxurywerehousestorage.com</a></p>
+                        <p><i class="icon-envelope-alt"></i> Email: <a href="#">info@luxurywarehousestorage.com</a></p>
                     </div>
                 </div>
                 <div class="footer-border"></div>
