cambios de texto preliminares a la entrega

--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
                                         <a href="index.html"><i class="icon-home"></i><br />Home</a>
                                     </li>
                                     <li>
+                                        <a href="about.html"><i class="icon-user"></i><br />About</a>
+                                    </li>
+                                     <li>
+                                        <a href="services.html"><i class="icon-tasks"></i><br />Uses</a>
+                                    </li>
+                                    <li>
                                         <a href="portfolio.html"><i class="icon-camera"></i><br />Gallery</a>
                                     </li>
                                     <li>
                                         <a href="#"><i class="icon-comments"></i><br />Testimonials</a>
-                                    </li>
-                                    <li>
-                                        <a href="services.html"><i class="icon-tasks"></i><br />Uses</a>
-                                    </li>
-                                    <li>
-                                        <a href="about.html"><i class="icon-user"></i><br />About</a>
                                     </li>
                                     <li>
                                         <a href="contact.html"><i class="icon-envelope-alt"></i><br />Contact</a>
@@ -91,22 +91,22 @@
                                 </li>
                                 <li data-thumb="assets/img/slider/2.jpg">
                                     <img src="assets/img/slider/2.jpg">
-                                    <p class="flex-caption">We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them</p>
+                                    <p class="flex-caption">Units can be customized with mezzanines, car lifts, custom flooring and more</p>
                                 </li>
                                 <li data-thumb="assets/img/slider/6.jpg">
                                     <img src="assets/img/slider/6.jpg">
-                                    <p class="flex-caption">We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them</p>
+                                    <p class="flex-caption">Spaciously built to accommodate even the biggest toy collection</p>
                                 </li>
                                 <li data-thumb="assets/img/slider/4.jpg">
                                     <img src="assets/img/slider/4.jpg">
-                                    <p class="flex-caption">We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them</p>
+                                    <p class="flex-caption">Climate controlled warehouses are perfect for storing important documents or filing</p>
                                 </li> <li data-thumb="assets/img/slider/3.jpg">
                                     <img src="assets/img/slider/3.jpg">
-                                    <p class="flex-caption">We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them</p>
+                                    <p class="flex-caption">Owners club with kitchen, washroom and lounge</p>
                                 </li>
                                 <li data-thumb="assets/img/slider/5.jpg">
                                     <img src="assets/img/slider/5.jpg">
-                                    <p class="flex-caption">We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them</p>
+                                    <p class="flex-caption">The safest way to store and enjoy your prized possessions.</p>
                                 </li>
 
                             </ul>
@@ -173,7 +173,7 @@
                 <div class="work span3">
                     <img src="assets/img/portfolio/club-house.jpg" alt="">
                     <h4>CLUB HOUSE</h4>
-                    <p>Luxury ware house serves a wide variety of business uses for owners in the Houston area. A business owner can scale back rental costs ...</p>
+                    <p>Luxury ware house has a clubhouse to provide owners with the services they need to spend more time with their toys in comfort ...</p>
                     <div class="icon-awesome">
                         <a href="assets/img/portfolio/club-house.jpg" rel="prettyPhoto"><i class="icon-search"></i></a>
                         <a href="portfolio.html"><i class="icon-plus"></i></a>
@@ -225,7 +225,7 @@
                 <div class="row">
                     <div class="widget span3">
                         <h4>About Us</h4>
-                        <p><p>Luxury warehose storage was designed to meet the strong and growing demand for climate controlled, over-sized storage (495 - 2400 square feet) while providing incomparable value through ownership.</p></p>
+                        <p><p>Luxury warehouse storage was designed to meet the strong and growing demand for climate controlled, over-sized storage (1200 - 2400 square feet) while providing incomparable value through ownership.</p></p>
                         <p><a href="about.html">Read more...</a></p>
                     </div>
                     <div class="widget span3">
