--- a/services.html
+++ b/services.html
@@ -55,17 +55,17 @@
                                     <li>
                                         <a href="index.html"><i class="icon-home"></i><br />Home</a>
                                     </li>
-                                    <li>
-                                        <a href="portfolio.html"><i class="icon-camera"></i><br />Gallery</a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="icon-comments"></i><br />Testimonials</a>
+                                     <li>
+                                        <a href="about.html"><i class="icon-user"></i><br />About</a>
                                     </li>
                                     <li class="current-page">
                                         <a href="services.html"><i class="icon-tasks"></i><br />Uses</a>
                                     </li>
                                     <li>
-                                        <a href="about.html"><i class="icon-user"></i><br />About</a>
+                                        <a href="portfolio.html"><i class="icon-camera"></i><br />Gallery</a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="icon-comments"></i><br />Testimonials</a>
                                     </li>
                                     <li>
                                         <a href="contact.html"><i class="icon-envelope-alt"></i><br />Contact</a>
@@ -96,11 +96,10 @@
             <div class="row">
                 <div class="services-full-width-text span12">
                     <h4>Uses</h4>
-                    <p>When compared to renting equivalent space, one advantage of owning is the increased rights. Rental properties are always under the control of a landlord, which means that monthly rent could be raised or the lease terminated with short notice to the tenant. Renters face the real prospect that their rents will escalate in the future because of rising construction costs: land, steel and concrete have risen over the years. By owning the space, individuals can avoid such surprises. And a mortgage should remain relatively stable over the life of a loan.</p>
-                    <p>This exclusive gated community of garage condominiums is situated on nine acres with 99 completed units. Each unit provides secure indoor storage for classic and exotic car collectors, boat and RV owners, business inventories, personal home possessions or workshops for the hobbyists .
-                    Add cabinets, shelving, mezzanines, car lifts, custom floor coverings, flat panel TVs and more. If you would like some recommendations, we have teamed with several companies to provide our buyers with the highest quality of flooring, mezzanines, and more.
+                    <p>When you look at the comparison between renting a space and buying one, the benefit is in your increased rights as an owner.  You will never have to worry about the rent of your space increasing, suddenly being taken away, or excessive rules and restrictions implied a landlord.  The space is yours to customize it any way you like so that you can get maximum enjoyment out of your investment.  Renters are constantly faced with the prospect that their rent will escalate in the future due to rising building costs.  As mortgage payments should remain relatively stable over time, Luxury Warehouse owners can avoid these problems.</p>
+                    <p>This exclusive gated community of garage condominiums is situated on approximately 10 acres with 150 completed units. Each unit provides secure indoor storage for classic and exotic car collectors, boat and RV owners, business inventories and important documents, important personal possessions or as workshop space for hobbyists. As an owner, you are encouraged to add cabinets, shelving, mezzanines, car lifts, custom floor coverings, or flat panel TVs; whatever you need to make your space enjoyable and functional. If you are interested in customizing your unit, we have teamed with several companies to provide our owners with the highest quality flooring, mezzanine construction, and other finishing options. 
                 </p>
-                <p>We placed strategically  closed circuit security cameras to record the comings and goings on the property. Each unit has a monitored heat detector. The perimeter is gated and coded for owners access only. Each owner, at his expense, may install cameras in their own unit that can be monitored from their computer at home. Above all, since you are in a community of like minded neighbors, the present owners keep an eye out for each other.</p>
+                <p>We strategically placed closed circuit security cameras to record the comings and goings on the property. Each unit has a monitored heat detector. The perimeter is gated and coded for owner’s access only. In addition, owners may install cameras in their own unit that can be monitored from their computer at home. Above all, since you are in a community of like minded neighbors, owners are always keeping an eye out for each other.</p>
                 </div>
             </div>
         </div>
@@ -152,7 +151,7 @@
                         <li>60 ft wide drive aisles</li>
                         <li>RV dump station</li>
                         <li>Quality controlled CC&R's</li>
-                        <li>Nine acre development with 300' setback off of Louetta</li>
+                        <li>10 acre development with 300' setback off of Kreinhop Rd.</li>
                     </ul>
                 </div>
                 <div class="services-half-width-text span6">
@@ -169,12 +168,13 @@
                         <li>Ample fluorescent lighting</li>
                         <li>Hard wired heat sensor</li>
                         <li>30 or 50 amp RV outlet</li>
+                        <li>Water and sewer available for all units</li>
                     </ul>
                 </div>
 
             </div>
             <div class="row">
-                <div class="services-full-width-text span12"><p> The smartly decorated clubhouse provides a kitchen area, a comfortable seating section with a large screen TV, WIFI network and three restroom facilities (one has a shower in it). Outside offers a granite table and chairs under a covered patio.</p></div>
+                <div class="services-full-width-text span12"><p>*The owner’s clubhouse provides a kitchen area, comfortable seating section with a widescreen TV, WIFI network and three restroom facilities (one with a shower). Owners can also enjoy a covered outdoor patio with granite table and chairs.</p></div>
             </div>
         </div>
 
@@ -198,7 +198,7 @@
                 <div class="row">
                     <div class="widget span3">
                         <h4>About Us</h4>
-                        <p><p>Luxury warehose storage was designed to meet the strong and growing demand for climate controlled, over-sized storage (495 - 2400 square feet) while providing incomparable value through ownership.</p></p>
+                        <p><p>Luxury warehouse storage was designed to meet the strong and growing demand for climate controlled, over-sized storage (1200 - 2400 square feet) while providing incomparable value through ownership.</p></p>
                         <p><a href="about.html">Read more...</a></p>
                     </div>
                     <div class="widget span3">
