--- a/portfolio.html
+++ b/portfolio.html
@@ -55,17 +55,17 @@
                                     <li>
                                         <a href="index.html"><i class="icon-home"></i><br />Home</a>
                                     </li>
+                                      <li>
+                                        <a href="about.html"><i class="icon-user"></i><br />About</a>
+                                    </li>
+                                     <li>
+                                        <a href="services.html"><i class="icon-tasks"></i><br />Uses</a>
+                                    </li>
                                     <li class="current-page">
                                         <a href="portfolio.html"><i class="icon-camera"></i><br />Gallery</a>
                                     </li>
                                     <li>
                                         <a href="#"><i class="icon-comments"></i><br />Testimonials</a>
-                                    </li>
-                                    <li>
-                                        <a href="services.html"><i class="icon-tasks"></i><br />Uses</a>
-                                    </li>
-                                    <li>
-                                        <a href="about.html"><i class="icon-user"></i><br />About</a>
                                     </li>
                                     <li>
                                         <a href="contact.html"><i class="icon-envelope-alt"></i><br />Contact</a>
@@ -201,7 +201,7 @@
                 <div class="row">
                     <div class="widget span3">
                         <h4>About Us</h4>
-                        <p><p>Luxury warehose storage was designed to meet the strong and growing demand for climate controlled, over-sized storage (495 - 2400 square feet) while providing incomparable value through ownership.</p></p>
+                        <p><p>Luxury warehouse storage was designed to meet the strong and growing demand for climate controlled, over-sized storage (1200 - 2400 square feet) while providing incomparable value through ownership.</p></p>
                         <p><a href="about.html">Read more...</a></p>
                     </div>
                     <div class="widget span3">
