--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 <span class="icon-bar"></span>
                             </a>
                             <h1>
-                                <a class="brand" href="index.html">Andia - a super cool design agency...</a>
+                                <a class="brand" href="index.html">Luxury warehouse</a>
                             </h1>
                             <div class="nav-collapse collapse">
                                 <ul class="nav pull-right">
@@ -87,25 +87,33 @@
                             <ul class="slides">
                                 <li data-thumb="assets/img/slider/1.jpg">
                                     <img src="assets/img/slider/1.jpg">
-                                    <p class="flex-caption">We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them</p>
+                                    <p class="flex-caption">The safest way to store and enjoy your prized possessions.</p>
                                 </li>
                                 <li data-thumb="assets/img/slider/2.jpg">
                                     <img src="assets/img/slider/2.jpg">
-                                    <p class="flex-caption">Units can be customized with mezzanines, car lifts, custom flooring and more</p>
+                                    <p class="flex-caption">The safest way to store and enjoy your prized possessions.</p>
                                 </li>
-                                <li data-thumb="assets/img/slider/6.jpg">
-                                    <img src="assets/img/slider/6.jpg">
-                                    <p class="flex-caption">Spaciously built to accommodate even the biggest toy collection</p>
+                                <li data-thumb="assets/img/slider/3.jpg">
+                                    <img src="assets/img/slider/3.jpg">
+                                    <p class="flex-caption">We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them<./p>
                                 </li>
                                 <li data-thumb="assets/img/slider/4.jpg">
                                     <img src="assets/img/slider/4.jpg">
-                                    <p class="flex-caption">Climate controlled warehouses are perfect for storing important documents or filing</p>
-                                </li> <li data-thumb="assets/img/slider/3.jpg">
-                                    <img src="assets/img/slider/3.jpg">
                                     <p class="flex-caption">Owners club with kitchen, washroom and lounge</p>
-                                </li>
-                                <li data-thumb="assets/img/slider/5.jpg">
+                                </li> <li data-thumb="assets/img/slider/5.jpg">
                                     <img src="assets/img/slider/5.jpg">
+                                    <p class="flex-caption">Units can be customized with mezzanines, car lifts, custom flooring and more.</p>
+                                </li>
+                                <li data-thumb="assets/img/slider/6.jpg">
+                                    <img src="assets/img/slider/6.jpg">
+                                    <p class="flex-caption">Spaciously built to accommodate even the biggest toy collection.</p>
+                                </li>
+                                <li data-thumb="assets/img/slider/7.jpg">
+                                    <img src="assets/img/slider/7.jpg">
+                                    <p class="flex-caption">Climate controlled warehouses are perfect for storing important documents or filing.</p>
+                                </li>
+                                <li data-thumb="assets/img/slider/8.jpg">
+                                    <img src="assets/img/slider/8.jpg">
                                     <p class="flex-caption">The safest way to store and enjoy your prized possessions.</p>
                                 </li>
 
