--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
                                 <span class="icon-bar"></span>
                             </a>
                             <h1>
-                                <a class="brand" href="index.html">Andia - a super cool design agency...</a>
+                                <a class="brand" href="index.html">Luxury warehouse</a>
                             </h1>
                             <div class="nav-collapse collapse">
                                 <ul class="nav pull-right">
