--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="assets/css/flexslider.css">
         <link rel="stylesheet" href="assets/css/font-awesome.css">
         <link rel="stylesheet" href="assets/css/style.css">
+            <link rel="stylesheet" media="screen" href="css/assets/style slider.css" />
 
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
