se agregó el nuevo codigo al slider
se agrego el codigo de prueba al slide y se eliminó el codigo del
flexslider

--- a/index.html
+++ b/index.html
@@ -80,48 +80,36 @@
         </div>
 
         <!-- Slider -->
-        <div class="slider">
-            <div class="container">
-                <div class="row">
-                    <div class="span10 offset1">
-                        <div class="flexslider">
-                            <ul class="slides">
-                                <li data-thumb="assets/img/slider/1.jpg">
-                                    <img src="assets/img/slider/1.jpg">
-                                    <p class="flex-caption">The safest way to store and enjoy your prized possessions.</p>
-                                </li>
-                                <li data-thumb="assets/img/slider/2.jpg">
-                                    <img src="assets/img/slider/2.jpg">
-                                    <p class="flex-caption">The safest way to store and enjoy your prized possessions.</p>
-                                </li>
-                                <li data-thumb="assets/img/slider/3.jpg">
-                                    <img src="assets/img/slider/3.jpg">
-                                    <p class="flex-caption">We have one simple goal: to create a home for your ‘toys’ and a place to enjoy them<./p>
-                                </li>
-                                <li data-thumb="assets/img/slider/4.jpg">
-                                    <img src="assets/img/slider/4.jpg">
-                                    <p class="flex-caption">Owners club with kitchen, washroom and lounge</p>
-                                </li> <li data-thumb="assets/img/slider/5.jpg">
-                                    <img src="assets/img/slider/5.jpg">
-                                    <p class="flex-caption">Units can be customized with mezzanines, car lifts, custom flooring and more.</p>
-                                </li>
-                                <li data-thumb="assets/img/slider/6.jpg">
-                                    <img src="assets/img/slider/6.jpg">
-                                    <p class="flex-caption">Spaciously built to accommodate even the biggest toy collection.</p>
-                                </li>
-                                <li data-thumb="assets/img/slider/7.jpg">
-                                    <img src="assets/img/slider/7.jpg">
-                                    <p class="flex-caption">Climate controlled warehouses are perfect for storing important documents or filing.</p>
-                                </li>
-                                <li data-thumb="assets/img/slider/8.jpg">
-                                    <img src="assets/img/slider/8.jpg">
-                                    <p class="flex-caption">The safest way to store and enjoy your prized possessions.</p>
-                                </li>
+        <div class="sequence-theme">
+            <div id="sequence">
 
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                <img class="sequence-prev" src="images/bt-prev.png" alt="Previous Frame" />
+                <img class="sequence-next" src="images/bt-next.png" alt="Next Frame" />
+
+                <ul class="sequence-canvas">
+                    <li class="animate-in">
+                        <h2 class="title">Built using Sequence.js</h2>
+                        <h3 class="subtitle">The Responsive Slider with Advanced CSS3 Transitions</h3>
+                        <img class="model" src="images/model1.jpg" alt="Model 1" />
+                    </li>
+                    <li>
+                        <h2 class="title">Creative Control</h2>
+                        <h3 class="subtitle">Create unique sliders using CSS3 transitions</h3>
+                        <img class="model" src="images/model2.png" alt="Model 2" />
+                    </li>
+                    <li>
+                        <h2 class="title">Cutting Edge</h2>
+                        <h3 class="subtitle">Supports modern browsers, old browsers (IE7+), touch devices and responsive designs</h3>
+                        <img class="model" src="images/model3.png" alt="Model 3" />
+                    </li>
+                </ul>
+
+                <ul class="sequence-pagination">
+                    <li><img src="images/tn-model1.png" alt="Model 1" /></li>
+                    <li><img src="images/tn-model2.png" alt="Model 2" /></li>
+                    <li><img src="images/tn-model3.png" alt="Model 3" /></li>
+                </ul>
+
             </div>
         </div>
 
